--- a/2022-07-06-mega-trade/mega-trade-01/index.html
+++ b/2022-07-06-mega-trade/mega-trade-01/index.html
@@ -130,7 +130,7 @@
     }
     .ttl-price {
         position: absolute;
-        top: 60%;
+        top: 62%;
         left: 50%;
         margin: 0 auto;
         max-width: 103px;
@@ -200,7 +200,7 @@
         text-decoration: underline;
     }
 
-    @media (max-height: 500px) {
+    @media (max-height: 600px) {
         .ttl {
             top: 26%;
             max-width: none;
@@ -231,9 +231,6 @@
         .banner {
             display: none;
         }
-    }
-
-    @media (max-height: 500px) and (orientation: landscape) {
         .foot-container {
             padding: 2px 22px;
         }
@@ -241,6 +238,7 @@
             margin: 2px auto;
         }
         .ttl {
+            top: 28%;
             max-width: none;
             width: 100%;
             font-size: 20px;
@@ -253,12 +251,15 @@
         }
     }
 
-    @media (max-width: 500px) and (max-height: 500px) and (orientation: landscape) {
+    @media (max-width: 600px) and (max-height: 600px) and (orientation: landscape) {
         .age {
             top: 2rem;
         }
     }
-    @media (min-height: 700px) and (orientation: landscape) {
+    @media (min-height: 601px) and (orientation: landscape) {
+        .header-container {
+            max-width: 900px;
+        }
         .banner {
             max-width: 70vmin;
         }
@@ -299,7 +300,7 @@
         <div class="foot">
             <div class="foot-container">
                 <div class="price">15₽ в день</div>
-                <a href="#" class="btn">Продолжить</a>
+                <a href="#" onclick="document.getElementById('ButtonSubmit').click();" class="btn">Продолжить</a>
                 <div class="terms">Услугу предоставляет ПАО «МегаФон»
                     <a href="https://www.google.com/">Правила предоставления услуги</a>
                 </div>
